fixed box alignment

--- a/styles/joinTheFight.css
+++ b/styles/joinTheFight.css
@@ -31,7 +31,7 @@
 
 
 .fightDonateWords p {
-    width: 700px;
+    width: 600px;
     font-size: 28px;
     text-align: justify;
     line-height: 2;
@@ -45,7 +45,6 @@
 .fightOptions {
     width: 100%;
     height: 700px;
-    background-color: lightgrey;
 }
 
 .fightYellowBar {
@@ -63,20 +62,16 @@
 }
 
 .fightOptionBoxes {
-    /*display: flex;
-    justify-content: space-around;*/
-    /*width: 80%;*/
     height: 800px;
-    margin-left: 80px;
-    /*margin-right: 80px;*/
+    margin-left: 40px;
     margin-top: 20px;
 }
 
 .fightOptionBoxes li {
-    
+    margin: 5px;
     background-color: #1e1f20;
     display: inline-block;
-    width: 23%;
+    width: 23.5%;
     height: 35%;
    
 }
